--- a/src/SharedComponents/ingredient/dialogBody.html
+++ b/src/SharedComponents/ingredient/dialogBody.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Dialog with elements</h1>
+<h1 mat-dialog-title>{{ingredientObject}}</h1>
 <div mat-dialog-content>
   This dialog showcases the title, close, content and actions elements.
 </div>
