--- a/src/SharedComponents/ingredient/dialogBody.html
+++ b/src/SharedComponents/ingredient/dialogBody.html
@@ -1,7 +1,6 @@
-<h1 mat-dialog-title>{{ingredientObject}}</h1>
-<div mat-dialog-content>
-  This dialog showcases the title, close, content and actions elements.
-</div>
-<div mat-dialog-actions>
-  <button mat-button mat-dialog-close>Close</button>
-</div>
+
+  <h1 mat-dialog-title>Ti fasi</h1>
+  <div mat-dialog-content>
+    This dialog showcases the title, close, content and actions elements.
+    {{ingredientName}}
+  </div>
